# Car-detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.adoc  resource.qrc
headers/: abstractobjectdetectionmodel.h  abstracttensorflowmodel.h  abstracttfmodel.h  constants.hpp  definedmodels.hpp  tensorflowmodel.h  tensorflowmodelmetadata.h  tensorflowvideosink.h  tfmodel.h  tfmodelmetadata.h  tfmodelworker.h  videohandler.h
headers/constants/: general.hpp  model.hpp
protobuf/tensorflow/lite/acceleration/configuration/: configuration.pb.cc  configuration.pb.h
protobuf/tensorflow/lite/experimental/acceleration/configuration/: configuration.pb.cc  configuration.pb.h
protobuf/tensorflow_lite_support/cc/task/core/proto/: base_options.pb.cc  base_options.pb.h  class.pb.cc  class.pb.h  classifications.pb.cc  classifications.pb.h  external_file.pb.cc  external_file.pb.h
protobuf/tensorflow_lite_support/cc/task/vision/proto/: bounding_box.pb.cc  bounding_box.pb.h  class.pb.cc  class.pb.h  classifications.pb.cc  classifications.pb.h  detections.pb.cc  detections.pb.h  embeddings.pb.cc  embeddings.pb.h  image_classifier_options.pb.cc  image_classifier_options.pb.h  image_embedder_options.pb.cc  image_embedder_options.pb.h  image_searcher_options.pb.cc  image_searcher_options.pb.h  image_segmenter_options.pb.cc  image_segmenter_options.pb.h  object_detector_options.pb.cc  object_detector_options.pb.h  segmentations.pb.cc  segmentations.pb.h
protobuf/tensorflow_lite_support/metadata/: metadata_schema_generated.h
qml/: CamerHandler.qml  Main.qml  StatusOverlay.qml
src/: abstractobjectdetectionmodel.cpp  abstracttensorflowmodel.cpp  abstracttfmodel.cpp  main.cpp  tensorflowmodel.cpp  tensorflowmodelmetadata.cpp  tensorflowvideosink.cpp  tfmodel.cpp  tfmodelmetadata.cpp  tfmodelworker.cpp  videohandler.cpp
